Fix minor JS bug, made project images clear and not squished, fix minor mobile responsiveness

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,7 @@ a {
   max-width: 300px;
   height: 300px;
   margin: 0;
+  object-fit: cover;
 }
 
 .project__buttons {
